--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,10 +20,12 @@
     <string name="yield_head">Yield</string>
     <string name="brewTime_head">Brew time</string>
     <string name="select_head"> </string>
-    <string name="view_recipies">View recipies</string>
+    <string name="view_recipes">View recipes</string>
     <string name="recipe_controls">Recipe controls</string>
     <string name="power_warning">Remember to check that power is off</string>
     <string name="power_default">off</string>
     <string name="temp_default">-</string>
     <string name="add_recipe_button">Add recipe</string>
+    <string name="temp_notification_body">The machine has heated up</string>
+    <string name="temp_notification_title">Temperature reached</string>
 </resources>
